--- a/templates/base.html
+++ b/templates/base.html
@@ -7,13 +7,19 @@
         <link rel="stylesheet" href="/css/styles.css">
     </head>
     <body>
-        <nav>
-            <ul>
-                <li><a href="/">home</a></li>
-                <li><a href="/blog">all posts</a></li>
-                <li><a href="/blog/newpost">new post</a></li>
-            </ul>
-        </nav>
+        <body>
+       <nav>
+           <ul id="user-account">
+               <li><a href="/login">login</a></li>
+               <li><a href="/logout">logout</a></li>
+           </ul>
+           <ul>
+               <li><a href="/">home</a></li>
+               <li><a href="/blog">all posts</a></li>
+               <li><a href="/blog/newpost">new post</a></li>
+           </ul>
+       </nav>
+       
         {% block content %}
         {% endblock %}
     </body>
