--- a/templates/blog.html
+++ b/templates/blog.html
@@ -8,13 +8,12 @@
 
 <h2><a href="/blog/{{ post.key().id() }}">{{ post.title }}</a></h2>
 <p>{{ post.body }}</p>
-<!-- TODO add author w/ link to author's blog page -->
-
+<p class="post-author">written by <a href="/blog/{{ post.author.username }}">{{ post.author.username }}</a></p>
 {% endfor %}
 
 {% if username %}
     {% if prev_page %}
-    <a href="/blog/{{ username }}?page={{ prev_page }}">&lt; prev</a>
+    <p class="post-author">written by <a href="/blog/{{ author }}?page={{ prev_page }}">&lt; prev {{ author }}</a>
     {% endif %}
 
     {% if prev_page and next_page %}
